# catkin_ws

devel/: .catkin  setup.fish
devel/lib/pkgconfig/: turtlebot3_rl_nav.pc
devel/lib/turtlebot3_rl_nav/: __init__.py  my_env.py  reset_world_demo.py  test.py
src/turtlebot3_rl_nav/: CMakeLists.txt
src/turtlebot3_rl_nav/launch/: 0_rl_nav_empty.launch  1_rl_nav_stage1.launch  2_rl_nav_world.launch  rl_world.launch
src/turtlebot3_rl_nav/logs/logs_<class 'stable_baselines3.ppo.ppo.PPO'>_20251202_1601_1/: events.out.tfevents.1764662514.lst.36806.0
src/turtlebot3_rl_nav/logs/logs_<class 'stable_baselines3.ppo.ppo.PPO'>_20251202_1616_1/: events.out.tfevents.1764663386.lst.39171.0
src/turtlebot3_rl_nav/logs/logs_<class 'stable_baselines3.ppo.ppo.PPO'>_20251202_1629_1/: events.out.tfevents.1764664199.lst.42508.0
src/turtlebot3_rl_nav/logs/logs_<class 'stable_baselines3.ppo.ppo.PPO'>_20251202_1630_1/: events.out.tfevents.1764664250.lst.43144.0
src/turtlebot3_rl_nav/logs/logs_PPO_20251202_1832_1/: events.out.tfevents.1764671547.lst.54892.0
src/turtlebot3_rl_nav/logs/logs_PPO_20251202_2009_1/: events.out.tfevents.1764677388.lst.63856.0
src/turtlebot3_rl_nav/logs/logs_PPO_20251202_2050_1/: events.out.tfevents.1764679840.lst.71723.0
src/turtlebot3_rl_nav/models/: models_<class 'stable_baselines3.ppo.ppo.PPO'>_20251202_1630
src/turtlebot3_rl_nav/scripts/: my_env.py  my_train.py  simple_move_forward.py  test.py  test_env_goal_reach.py  test_env_goal_sampling.py  test_steps.py  utils.py
src/turtlebot3_rl_nav/worlds/: my_empty.world  my_world.world  rl_world.world
(+1 files in other folders)
